--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ZVf-B4-iXl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Qcg-ez-qb3">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--홈-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Botoo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="Botoo" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,17 +17,9 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Protected" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UqD-1G-1vt">
-                                <rect key="frame" x="149" y="95" width="77" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="gjW-09-gUb"/>
+                    <tabBarItem key="tabBarItem" title="홈" id="ayI-df-irD"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
@@ -35,7 +28,149 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="589.5" y="119.5"/>
+            <point key="canvasLocation" x="601.5" y="123.5"/>
+        </scene>
+        <!--채팅-->
+        <scene sceneID="uCG-u9-ff0">
+            <objects>
+                <viewController id="vPs-lm-yXt" customClass="ChatTabViewController" customModule="Botoo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gOL-FI-2aI"/>
+                        <viewControllerLayoutGuide type="bottom" id="X0L-nQ-Fqq"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="GvT-Lm-NEz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="채팅" badgeValue="0" id="rz3-Mg-zQr"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PqW-Or-fpz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1087.5" y="123.5"/>
+        </scene>
+        <!--칭구이름-->
+        <scene sceneID="NpV-tA-8Pb">
+            <objects>
+                <viewController id="iws-kV-VAm" customClass="ChatViewController" customModule="Botoo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SIN-UT-5dm"/>
+                        <viewControllerLayoutGuide type="bottom" id="8hj-u8-MZk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="X9m-rj-0VG">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="92Y-Q6-G81">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="add" id="dGT-QV-uMr">
+                                        <color key="tintColor" red="0.84705882349999995" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" id="MjI-2j-dR7">
+                                        <view key="customView" contentMode="scaleToFill" id="nWO-Qg-OEG">
+                                            <rect key="frame" x="43" y="6" width="325" height="33"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="rgZ-gr-5sK">
+                                                    <rect key="frame" x="249" y="2" width="76" height="30"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2kQ-RG-M4F">
+                                                            <rect key="frame" x="0.0" y="0.0" width="22" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="22" id="O9p-Ww-ada"/>
+                                                                <constraint firstAttribute="height" constant="30" id="yUK-je-aPW"/>
+                                                            </constraints>
+                                                            <inset key="imageEdgeInsets" minX="0.0" minY="3" maxX="0.0" maxY="3"/>
+                                                            <state key="normal" image="Icon-60.png"/>
+                                                        </button>
+                                                        <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pYB-xM-8JG">
+                                                            <rect key="frame" x="34" y="0.0" width="42" height="30"/>
+                                                            <inset key="contentEdgeInsets" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                                            <state key="normal" title="전송"/>
+                                                        </button>
+                                                    </subviews>
+                                                </stackView>
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ml7-Kj-9Cp">
+                                                    <rect key="frame" x="8" y="2" width="233" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </view>
+                                    </barButtonItem>
+                                </items>
+                                <color key="barTintColor" red="0.98823529409999999" green="0.89411764709999997" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
+                            </toolbar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="92Y-Q6-G81" firstAttribute="leading" secondItem="X9m-rj-0VG" secondAttribute="leadingMargin" constant="-20" id="JuJ-Me-8gr"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="92Y-Q6-G81" secondAttribute="trailing" constant="-20" id="LhX-eD-ZHC"/>
+                            <constraint firstItem="8hj-u8-MZk" firstAttribute="top" secondItem="92Y-Q6-G81" secondAttribute="bottom" id="PAh-8n-5Us"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="칭구이름" id="ERZ-c4-XRY">
+                        <barButtonItem key="leftBarButtonItem" style="done" systemItem="stop" id="Fcz-YL-pju">
+                            <color key="tintColor" red="0.84705882352941175" green="0.10588235294117647" blue="0.37647058823529411" alpha="1" colorSpace="calibratedRGB"/>
+                            <connections>
+                                <action selector="closeOnClick:" destination="iws-kV-VAm" id="FE0-eP-pec"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="organize" id="Kyn-pv-pdE">
+                            <color key="tintColor" red="0.84705882349999995" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="toolbarBottomConstraint" destination="PAh-8n-5Us" id="mtY-UI-MHm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hff-Qo-aru" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1487.5" y="879.5"/>
+        </scene>
+        <!--편지-->
+        <scene sceneID="Z3W-bp-EJf">
+            <objects>
+                <viewController id="Dyn-mD-alR" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="PUh-as-w6i"/>
+                        <viewControllerLayoutGuide type="bottom" id="8CL-MQ-nfc"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CU3-pm-ELW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="편지" badgeValue="0" id="yaI-tb-dKj"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q1Q-V9-vyI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1562.5" y="123.5"/>
+        </scene>
+        <!--설정-->
+        <scene sceneID="PDa-KB-qV7">
+            <objects>
+                <viewController id="ddA-zB-I43" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xYl-nr-3Cl"/>
+                        <viewControllerLayoutGuide type="bottom" id="Yjf-mD-fGX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="bFM-L5-a11">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="설정" id="rte-9F-r1r"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tbF-oh-KD5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1998.5" y="123.5"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="aeC-RU-HKx">
@@ -195,26 +330,51 @@
             </objects>
             <point key="canvasLocation" x="1562.5" y="-606.5"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Iwn-1a-huA">
+        <!--Tab Bar Controller-->
+        <scene sceneID="Nk3-v4-lFS">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZVf-B4-iXl" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Qcg-ez-qb3" sceneMemberID="viewController">
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="s1b-WM-aVZ">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="Mvc-H2-sFW">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.9882352941176471" green="0.89411764705882346" blue="0.92549019607843142" alpha="1" colorSpace="calibratedRGB"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="k7X-Td-VhE"/>
+                        <segue destination="vPs-lm-yXt" kind="relationship" relationship="viewControllers" id="nvd-7l-T5z"/>
+                        <segue destination="Dyn-mD-alR" kind="relationship" relationship="viewControllers" id="xBt-qg-IDF"/>
+                        <segue destination="ddA-zB-I43" kind="relationship" relationship="viewControllers" id="y4x-mr-EcN"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yrl-r5-OMI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="181.5" y="123.5"/>
+        </scene>
+        <!--Chat Nav View Controller-->
+        <scene sceneID="Bkh-EI-FEB">
+            <objects>
+                <navigationController storyboardIdentifier="ChatNavViewController" automaticallyAdjustsScrollViewInsets="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" id="ADp-PW-pPF" customClass="ChatNavViewController" customModule="Botoo" customModuleProvider="target" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1Va-dK-3My">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="V32-CG-WRo"/>
+                        <segue destination="iws-kV-VAm" kind="relationship" relationship="rootViewController" id="V9t-7R-1Bo"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Utu-J3-sTj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4TL-sX-qOW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117" y="120"/>
+            <point key="canvasLocation" x="1087" y="880"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Icon-60.png" width="60" height="60"/>
+    </resources>
     <inferredMetricsTieBreakers>
         <segue reference="4a1-F2-BdS"/>
     </inferredMetricsTieBreakers>
